# simod_docker

./: .gitignore  BT_MTC-integration_example.md  BT_integration_tutorial.md  Project.btproj  README.md  docker-compose-gui.yml
BehaviorTree/BallGrasp_example/: CMakeLists.txt  main.cpp
BehaviorTree/SRM_usecase/src/: CMakeLists.txt  main.cpp
BehaviorTree/SRM_usecase/src/srm1/: CMakeLists.txt  package.xml
BehaviorTree/SRM_usecase/src/srm1/XML/: BTs_Simod.xml  SRM_Supervisor.xml  tree.xml
BehaviorTree/SRM_usecase/src/srm1/action/: Act.action
BehaviorTree/SRM_usecase/src/srm1/include/srm1/action/: act.h  act.hpp
BehaviorTree/SRM_usecase/src/srm1/include/srm1/action/detail/: act__builder.hpp  act__functions.h  act__rosidl_typesupport_fastrtps_c.h  act__rosidl_typesupport_fastrtps_cpp.hpp  act__rosidl_typesupport_introspection_c.h  act__rosidl_typesupport_introspection_cpp.hpp  act__struct.h  act__struct.hpp  act__traits.hpp  act__type_support.h  act__type_support.hpp
BehaviorTree/SRM_usecase/src/srm1/include/srm1/msg/: message.h  message.hpp  rosidl_generator_c__visibility_control.h  rosidl_generator_cpp__visibility_control.hpp  rosidl_typesupport_fastrtps_c__visibility_control.h  rosidl_typesupport_fastrtps_cpp__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h
BehaviorTree/SRM_usecase/src/srm1/include/srm1/msg/detail/: message__builder.hpp  message__functions.h  message__rosidl_typesupport_fastrtps_c.h  message__rosidl_typesupport_fastrtps_cpp.hpp  message__rosidl_typesupport_introspection_c.h  message__rosidl_typesupport_introspection_cpp.hpp  message__struct.h  message__struct.hpp  message__traits.hpp  message__type_support.h  message__type_support.hpp
BehaviorTree/SRM_usecase/src/srm1/include/srm1/srv/: service.h  service.hpp
BehaviorTree/SRM_usecase/src/srm1/include/srm1/srv/detail/: service__builder.hpp  service__functions.h  service__rosidl_typesupport_fastrtps_c.h  service__rosidl_typesupport_fastrtps_cpp.hpp  service__rosidl_typesupport_introspection_c.h  service__rosidl_typesupport_introspection_cpp.hpp  service__struct.h  service__struct.hpp  service__traits.hpp  service__type_support.h  service__type_support.hpp
BehaviorTree/SRM_usecase/src/srm1/src/: callbacks.cpp  callbacks.hpp  main.cpp
BehaviorTree/SRM_usecase/src/srm1/srv/: service.srv
BehaviorTree/XML/: BTs_Simod.xml  SRM1.xml  SRM2.xml  SRM_Superv.xml  scenario1.btproj  thing.xml
bridge_docker/: Dockerfile
bridge_ws/: bridge_setup.bash
gazebo_world/: usecase.world
ros1_docker/: Dockerfile  docker-compose-gui.yml
ros1_ws/src/summit_xl_sim/summit_xl_gazebo/: CMakeLists.txt  package.xml
ros1_ws/src/summit_xl_sim/summit_xl_gazebo/config/: left_controllers.yaml  right_controllers.yaml  topics.yaml
ros1_ws/src/summit_xl_sim/summit_xl_gazebo/launch/: environment.launch  gazebo_rviz.launch  parameter.launch  summit_xl_gazebo.launch
ros1_ws/src/summit_xl_sim/summit_xl_gazebo/src/: tf_transform.py
ros1_ws/src/summit_xl_sim/summit_xl_gazebo/worlds/: summit_xl_office.world
ros1_ws/src/summit_xl_sim/summit_xl_gazebo/xacro/: ur_base.urdf.xacro
ros2_docker/: Dockerfile
ros2_ws/: analyze_move_group.py  camera_world  command_move_test.sh  export_plugin_path.bash  left_resolved.urdf  left_resolved_paletta.urdf  movimenti_comandi_ros.bash  requirements.txt  right_resolved.urdf  right_resolved_paletta.urdf  ros2_setup.bash  scan_ros2_packages.py  verify_robot_config.py
ros2_ws/.ps_try/: CMakeLists.txt  package.xml
ros2_ws/.ps_try/src/: ps_try.cpp
ros2_ws/assets/: usecase1(mura+pallet).stl  usecase1_meshed_1strato.dae  usecase1_meshed_1strato.stl  usecase1_meshed_2strati.dae  usecase1_meshed_2strati.stl  usecase2_meshed_1strato.dae  usecase2_meshed_1strato.stl  usecase2_meshed_2strati.dae  usecase2_meshed_2strati.stl  usecase3_meshed_1strato.dae  usecase3_meshed_1strato.stl  usecase3_meshed_2strati.dae  usecase3_meshed_2strati.stl
ros2_ws/gazebo_worlds/: usecase1_1fila.world  usecase1_2file.world  usecase2_1fila.world  usecase2_2file.world  usecase3_1fila.world  usecase3_2file.world
ros2_ws/ps_try/: CMakeLists.txt  package.xml
ros2_ws/ps_try/src/: ps_try.cpp
ros2_ws/simod_logs/: jul7.8og
ros2_ws/simod_logs/frames/: frames_2025-04-16_10.13.33.gv  frames_2025-04-16_12.52.29.gv  frames_2025-04-16_12.58.58.gv  frames_2025-04-16_13.07.55.gv  frames_2025-04-16_13.09.35.gv  frames_2025-04-16_13.38.41.gv  frames_2025-04-16_13.44.00.gv  frames_2025-04-16_13.46.05.gv  (+14 more)
ros2_ws/src/gazebo_collision_toggle/: CMakeLists.txt  package.xml
ros2_ws/src/gazebo_collision_toggle/src/: toggle_collision_plugin (Copy).cpp  toggle_collision_plugin.cpp
ros2_ws/src/gazebo_collision_toggle/srv/: SetCollisionEnabled.srv
ros2_ws/src/gazebo_link_gravity_toggle/: CMakeLists.txt  package.xml
ros2_ws/src/gazebo_link_gravity_toggle/src/: toggle_link_gravity_plugin.cpp
ros2_ws/src/gazebo_link_gravity_toggle/srv/: SetLinkGravity.srv
ros2_ws/src/ps_try/: CMakeLists.txt  package.xml
ros2_ws/src/ps_try/config/: bt_demo_params.yaml  dual_paletta.yaml  ee_task.yaml  left_kinematics.yaml  right_kinematics.yaml
ros2_ws/src/ps_try/launch/: ps_try.launch.py
ros2_ws/src/ps_try/scripts/: bt_ros2_demo-xml.py  bt_ros2_demo.py  level_paletta_utils.py  move_demo.py  pick_and_place_demo - doppio.py  pick_and_place_demo -- 1.py  pick_and_place_demo OK.py  pick_and_place_demo.py  return_robots_home.py  test_sim_time.py
ros2_ws/src/ps_try/scripts/behaviortree_XML_demo/: SRM_Supervisor.xml
ros2_ws/src/ps_try/scripts/bt_xml_demo/: __init__.py  actions.py  bootstrap.py  bt_action_basic.py  bt_action_context.py  bt_action_motion.py  bt_tree_patch.py  cmd_utils.py  core.py  params.py  runner.py
ros2_ws/src/ps_try/scripts/bt_xml_demo/mixins/: __init__.py  approach_planning.py  gazebo_bridge.py  tp_control.py
ros2_ws/src/ps_try/src/: ps_try.cpp
ros2_ws/src/simod_moveit_action_controller/: CMakeLists.txt  package.xml
ros2_ws/src/simod_moveit_action_controller/action/: MultiDofFollowJointTrajectory.action
ros2_ws/src/simod_moveit_action_controller/src/: simod_mac.cpp
(+162 files in other folders)
