<?xml version="1.0"?>
<package format="3">
  <name>gazebo_link_gravity_toggle</name>
  <version>0.1.0</version>
  <description>World plugin per attivare/disattivare la gravità su link in Gazebo Classic (ROS 2)</description>


  <maintainer email="you@example.com">Your Name</maintainer>
  <license>BSD-3-Clause</license>

  <member_of_group>rosidl_interface_packages</member_of_group>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>gazebo</depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
