<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>simod_moveit_action_controller</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="todo@todo.com">outlander</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <build_depend>moveit_core</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rclcpp_action</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>moveit_core</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>moveit_msgs</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclcpp_action</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>

  <build_export_depend>rosidl_default_runtime</build_export_depend>
  <build_export_depend>moveit_core</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>moveit_msgs</build_export_depend>
  <build_export_depend>rclcpp</build_export_depend>
  <build_export_depend>rclcpp_action</build_export_depend>
  <build_export_depend>trajectory_msgs</build_export_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
  
  

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
